--- a/css/stlye-desktop.css
+++ b/css/stlye-desktop.css
@@ -1,3 +1,32 @@
+/* GENERAL */
+.container {
+    width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 1em;
+    padding-right: 1em;
+}
+
+.bloc {
+    background-color: rgb(242, 242, 242);
+}
+
+ul {
+    list-style:none;
+    margin-left:0;
+    padding-left:0;
+}
+
+
+/* HEADER */
+#menu {
+    width: 440px;
+    margin-left: 1000px;
+    margin-top: 1em;
+}
+
+
+
 /* FLEXBOX*/
 
 .df {
@@ -10,6 +39,14 @@
 
 .jc-sa {
     justify-content: space-around;
+}
+
+.jc-se {
+    justify-content: space-evenly;
+}
+
+.jc-sb {
+    justify-content: space-between;
 }
 
 .flex-row {
