--- a/css/stlye-desktop.css
+++ b/css/stlye-desktop.css
@@ -14,6 +14,7 @@ body {
     margin-right: auto;
     padding-left: 1em;
     padding-right: 1em;
+    padding-top: 2em;
 }
 
 .bloc {
@@ -28,9 +29,24 @@ body {
     margin-top: 1em;
 }
 
+#menu a {
+    text-decoration: none;
+    color: black;
+}
+
 #menu a:hover {
-    color: blue;
+    color: #0065FC;
+    /*padding-top: 2em;*/
     border-top: solid;
+}
+
+#menu a:checked {
+    text-decoration: black;
+}
+
+#register {
+    color:#0065FC;
+    font-weight: bold;
 }
 
 /* BODY */
