--- a/css/stlye-desktop.css
+++ b/css/stlye-desktop.css
@@ -113,6 +113,12 @@ body {
     background-color: #DEEBFF;
 }
 
+.thumbnail {
+    overflow: hidden;
+    width: 260px; 
+    padding: 1em;
+}
+
 /* FOOTER */ 
 
 #footer {
