--- a/css/stlye-desktop.css
+++ b/css/stlye-desktop.css
@@ -127,10 +127,12 @@ body {
     border-radius: 2em;
     border-width: 1em; /* NE FONCTIONNE PAS ??? */ 
     padding-left: 1em;
+    margin-bottom: 2em;
 }
 
-.activity-thumbnail {
-    /* a c/c */
+.popular-thumbnail-text {
+    padding-top: 1em ; 
+    margin-left: 0.5em; 
 }
 
 .show-more:hover {
