--- a/css/stlye-desktop.css
+++ b/css/stlye-desktop.css
@@ -57,6 +57,7 @@ body {
 }
 
 /* BODY */
+
 #body-search-btn {
     background-color: #0065FC;
     color: white;
@@ -198,10 +199,28 @@ body {
     background-color: #DEEBFF;
 }
 
+/* LOGOS */
+
 .filter-logo {
     background-color: green;
     border-radius: 50%
 }
+
+#logo-gps {
+    background-color: #F2F2F2;
+    width: 30px; 
+    height: 31px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    padding: 3px;
+}
+
+#logo-gps-pos {
+    padding-left: 30%;
+    padding-top: 25%;
+}
+
+
 
 /* FOOTER */ 
 
@@ -244,6 +263,10 @@ body {
 
 .jc-s {
     justify-content: start;
+}
+
+.jc-c {
+    justify-content: center;
 }
 
 .fd-r {
