--- a/css/stlye-desktop.css
+++ b/css/stlye-desktop.css
@@ -29,7 +29,8 @@ body {
     width: 100%;
     max-width: 440px;
     margin-left: auto;
-    margin-top: 1em;
+    padding-left: 2em;
+    padding-right: 2em;
 }
 
 #menu a {
@@ -57,6 +58,12 @@ body {
 }
 
 /* BODY */
+
+#first-bloc {
+    margin: auto;
+    padding-left: 2em;
+    padding-right: 2em;
+}
 
 #body-search-btn {
     background-color: #0065FC;
@@ -88,25 +95,31 @@ body {
     cursor: pointer;
     background-color: #DEEBFF;
 }
+
+#body-hosting {
+    padding-right: 2em;
+}
   
 #body-hosting-marseille {
     width: 60%; 
     padding-right: 5em;
     padding-left: 2em;
+    margin-right: auto;
+    margin-left: 2em;
 }
 
 #body-hosting-popular {
     width: 21%; 
-    padding-right: 1em;
+    padding-right: 2em;
     padding-left: 2em;
+    margin-left: auto;
+    margin-right: 2em;
   }
 
 
 .body-hosting {
     border-radius: 1em;
     padding-top: 2em;
-    margin-left: auto;
-    margin-right: auto;
     height: 525px;
 }
 
