--- a/css/style-pad.css
+++ b/css/style-pad.css
@@ -1,3 +1,436 @@
+/* GENERAL */
 body {
+    font-family: Raleway, Arial, Helvetica, sans-serif;
     background-color: rgba(0, 0, 255, 0.404);
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.thin {
+    font-weight: normal;
+}
+
+h1, h2 {
+    margin: 0px;
+    font-size: 1em;
+}
+
+.container {
+    max-width: 1440px;
+    width: 100%;
+    margin: auto;
+    padding-left: 1em;
+    padding-right: 1em;
+}
+
+.bloc {
+    background-color: #F2F2F2;
+}
+
+
+/* HEADER */
+#logo-reservia {
+   margin-left: 2em;
+}
+
+#menu {
+    width: 100%;
+    max-width: 440px;
+    margin-left: auto;
+    padding-left: 2em;
+    padding-right: 2em;
+}
+
+#menu a {
+    text-decoration: none;
+    color: black;
+    padding-top: 30px;
+    border-top: solid;
+    border-color: white;
+    font-weight: bold;
+}
+
+#menu a:hover {
+    border-color: #0065FC;
+    color: #0065FC;
+}
+
+
+#menu a:checked {
+    text-decoration: black;
+}
+
+#menu :nth-child(3) {
+    color:#0065FC;
+}
+
+/* BODY */
+
+#first-bloc {
+    margin: auto;
+    padding-left: 2em;
+    padding-right: 2em;
+}
+
+#first-bloc p  {
+    line-height: 1.5em;
+}
+
+#body-search-btn {
+    background-color: #0065FC;
+    color: white;
+    font-weight: bold;
+    display: inline-block;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    line-height: 1.5;
+    border-top-right-radius: .75em;
+    border-bottom-right-radius: .75em;
+}
+
+#body-search-btn:hover{
+    cursor: pointer;
+    background-color: #064db8;
+}
+
+.filter {
+    border: solid;
+    border-radius: 3em;
+    border-color: #DEEBFF;
+    padding: 0.5em;
+    margin: 0.5em;
+}
+
+.filter:hover {
+    cursor: pointer;
+    background-color: #DEEBFF;
+}
+
+#body-hosting {
+    flex-direction: column;
+}
+  
+#body-hosting-marseille {
+    width: auto; 
+    margin: auto;
+}
+
+#body-hosting-popular {
+    width: auto; 
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1em;
+    margin-top: 1em;
+    height: auto;
+  }
+
+
+.body-hosting {
+    border-radius: 1em;
+    padding-top: 2em;
+}
+
+.body-hosting a {
+    text-decoration: none;
+    color: black;
+}
+
+.hosting-thumbnail {
+    background-color: white;
+    width: 260px; 
+    height: 175px; 
+    padding: 0.3em;
+    margin: 1em;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-width: 1em; 
+}
+
+.hosting-thumbnail-text {
+    padding-left: 1em;
+}
+
+.hosting-thumbnail-photo {
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    padding: 1px;
+    width: 260px;
+    height: 100px;
+    object-fit: cover;
+}
+
+#body-hosting-popular-results {
+    display: flex;
+    flex-direction: row;
+}
+
+.popular-thumbnail {
+    background-color: white;
+    width: 300px; 
+    height: 126px;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-width: 1em; 
+    padding-top: 3px;
+    padding-left: 3px;
+}
+
+.popular-thumbnail:nth-child(1) {
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+.popular-thumbnail:nth-child(2) {
+    margin-bottom: 2em;
+}
+
+.popular-thumbnail-text {
+    padding-top: 1em ; 
+    margin-left: 0.5em; 
+}
+
+.popular-thumbnail-photo {
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    padding: 1px;
+    width: 100px;
+    height: 120px;
+    object-fit: cover;
+}
+
+.show-more:hover {
+    cursor: pointer;
+    color: rgba(0, 0, 0, 0.425);
+}
+
+/* activités à Marseille */
+
+#body-activity {
+    width: auto;
+    margin: auto;
+    padding: 1em;
+    flex-wrap: wrap;
+
+}
+
+.activities {
+    margin: 1em;
+    height: 500px;
+    background-color:white;
+    border-top-right-radius: 30px;
+    border-top-left-radius: 30px;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    box-shadow: 1px 1px 5px #F2F2F2;
+
+}
+
+.activities-double {
+    margin: 1em;
+    height: 500px;
+}
+
+.activities-double a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+
+.activities a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+
+.activity {
+    border-radius: 1em;
+    box-shadow: 4px 6px 15px -3px #F2F2F2;
+}
+
+.activities-thumbnail-big-photo {
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    width: 325px;
+    height: 450px;
+    object-fit: cover;
+}
+
+.activities-thumbnail-text {
+    padding-top: 0.75em;
+    padding-left: 1em;
+}
+
+.activities-thumbnail-little {
+    background-color: white;
+    padding-bottom: 1em;
+    border-top-right-radius: 30px;
+    border-top-left-radius: 30px;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    box-shadow: 1px 1px 5px #F2F2F2;
+}
+
+.activities-thumbnail-little-photo {
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    width: 300px;
+    object-fit: cover;
+}
+
+.activities-thumbnail-little-photo-one {
+    height: 200px;
+}
+
+.activities-thumbnail-little-photo-two {
+    height: 150px;
+}
+
+.activities-thumbnail-little-photo-three {
+    height: 180px;
+}
+
+.activities-thumbnail-little-photo-four {
+    height: 180px;
+}
+
+#activities-title {
+    padding-top: 2em;
+    padding-left: 1em;
+}
+
+#activity-activities {
+    flex-wrap: wrap;
+}
+
+/* LOGOS */
+
+
+#logo-gps {
+    background-color: #F2F2F2;
+    width: 30px; 
+    height: 31px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    padding: 3px;
+}
+
+#logo-gps-pos {
+    padding-left: 30%;
+    padding-top: 25%;
+}
+
+.filter-logo-circle {
+    background-color: #DEEBFF ;
+    border-radius: 50%;
+    height: 35px;
+    width: 35px;
+}
+
+/* FOOTER */ 
+
+#footer {
+    padding-left: 50px;
+    padding-right: 360px;
+    padding-top: 50px;
+    padding-bottom: 20px;
+}
+
+#footer ul {
+    list-style:none;
+    margin-left:0;
+    padding-left:0;
+}
+
+#footer ul li {
+    line-height: 2;
+}
+
+
+/* FLEXBOX*/
+
+.df {
+    display: flex;
+}
+
+.jc-fe {
+    justify-content: flex-end;
+}
+
+.jc-sa {
+    justify-content: space-around;
+}
+
+.jc-se {
+    justify-content: space-evenly;
+}
+
+.jc-sb {
+    justify-content: space-between;
+}
+
+.jc-s {
+    justify-content: start;
+}
+
+.jc-c {
+    justify-content: center;
+}
+
+.fd-r {
+    flex-direction: row;
+}
+
+.fd-rr {
+    flex-direction: row-reverse;
+}
+
+.fd-c {
+    flex-direction: column;
+}
+
+.fd-cr {
+    flex-direction: column-reverse;
+}
+
+.ta-c {
+	text-align: center;
+}
+
+.ta-j {
+	text-align: justify;
+}
+
+.ac-fe {
+    align-content: flex-end;
+}
+
+.ac-c {
+    align-content: center;
+}
+
+.ac-fs {
+    align-content: flex-start;
+   }
+
+.as-s {
+    align-self: flex-start;
+} 
+
+.as-c {
+    align-self: center;
+}
+
+.as-e {
+    align-self: flex-end;
+}
+
+
+.fw-w {
+    flex-wrap: wrap;
 }
