responsiv desktop + pad done

--- a/css/style-phone.css
+++ b/css/style-phone.css
@@ -1,6 +1,7 @@
 /* GENERAL */
 body {
     font-family: Raleway, Arial, Helvetica, sans-serif;
+    background-color: rgba(153, 205, 50, 0.342);
 }
 
 .bold {
