--- a/css/style-pad.css
+++ b/css/style-pad.css
@@ -1,7 +1,7 @@
 /* GENERAL */
 body {
     font-family: Raleway, Arial, Helvetica, sans-serif;
-    background-color: rgba(0, 0, 255, 0.404);
+    background-color: rgba(0, 0, 255, 0.13);
 }
 
 .bold {
@@ -72,6 +72,7 @@ h1, h2 {
     margin: auto;
     padding-left: 2em;
     padding-right: 2em;
+    width: auto;
 }
 
 #first-bloc p  {
@@ -110,16 +111,19 @@ h1, h2 {
 
 #body-hosting {
     flex-direction: column;
+    
 }
   
 #body-hosting-marseille {
     width: auto; 
     margin: auto;
     padding: 1em;
+    align-items: center;
 }
 
 #body-hosting-marseille-one, #body-hosting-marseille-two {
     flex-wrap: wrap;
+    justify-content: center;
 } 
 
 
@@ -131,6 +135,7 @@ h1, h2 {
     margin-top: 1em;
     height: auto;
     flex-direction: column;
+    align-items: center;
   }
 
 
@@ -174,6 +179,12 @@ h1, h2 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
+    width: auto;
+}
+
+.body-hosting-popular-results-bloc {
+    margin: 1em;
 }
 
 .popular-thumbnail {
@@ -220,9 +231,9 @@ h1, h2 {
 /* activités à Marseille */
 
 #body-activity {
-    max-width: ;width: 700px; 
     flex-wrap: wrap;
     margin: auto;
+    max-width: 700px;
 }
 
 .activities {
@@ -342,12 +353,16 @@ h1, h2 {
 /* FOOTER */ 
 
 #footer {
-    padding-left: auto;
-    padding-right: auto;
+    padding-left: 3em;
+    padding-right: 3em;
     padding-top: 50px;
     padding-bottom: 20px;
-    margin: 1em;
+    margin-top: 1em;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-between;
 }
 
 #footer ul {
